ecsdb_cli/src/snapshots/ecsdb_cli__pipeline__test__query_filters@all | skip(1).snap
---
source: ecsdb_cli/src/pipeline.rs
description: "Pipeline::parse(\"all | skip(1)\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
            Skip(
                1,
            ),
        ],
    },
)
