ecsdb_cli/src/snapshots/ecsdb_cli__pipeline__test__query_filters@all.snap
---
source: ecsdb_cli/src/pipeline.rs
description: "Pipeline::parse(\"all\")"
expression: "Pipeline::parse(pipeline)"
---
Ok(
    Pipeline {
        stages: [
            All,
        ],
    },
)
